--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,35 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.xlogix.thingsbluetoothaudio"
-    />
+    package="me.xlogix.thingsbluetoothaudio">
+
+  <uses-permission android:name="android.permission.BLUETOOTH"/>
+  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+  <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED"/>
+  <uses-permission android:name="com.google.android.things.permission.MANAGE_INPUT_DRIVERS"/>
+  <uses-permission android:name="com.google.android.things.permission.MANAGE_BLUETOOTH"/>
+
+  <application
+      android:allowBackup="true"
+      android:icon="@android:drawable/sym_def_app_icon"
+      android:label="@string/app_name">
+
+    <uses-library android:name="com.google.android.things"/>
+
+    <activity android:name=".A2dpSinkActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+
+      <!-- Launch activity automatically on Android Things boot -->
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.IOT_LAUNCHER"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+      </intent-filter>
+    </activity>
+
+  </application>
+
+
+</manifest>
